--- a/views/index.html
+++ b/views/index.html
@@ -319,7 +319,7 @@
                         method: 'GET',
                         url: `/image/thumbnails/${e.replace('.mp4', '')}.png`,
                         success: function (data) {
-                            var x = template.replaceAll('{{ videoTitle }}', e).replaceAll('{{ videoLink }}', `/play/${e}`).replaceAll('{{ videoThumbnail }}', e);
+                            var x = template.replaceAll('{{ videoTitle }}', e).replaceAll('{{ videoLink }}', `/play/${e}`).replaceAll('{{ videoThumbnail }}', e.replace('.mp4', ''));
                             $('#loadlist').append(x);
                         },
                         error: function () {
