--- a/views/index.html
+++ b/views/index.html
@@ -66,11 +66,12 @@
             <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
             <div class="container">
                 <div class="banner_content text-center">
-                    <h6>WANNA WATCH BEST VIDEO'S</h6>
-                    <h2>START UPLOADING</h2>
-                    <p>SwiftStack innovations power multi-cloud data management for Enterprises,
-                        <br> enabling freedom to move workloads between clouds with universal
-                        <br> access to data across on-premises and public infrastructure.</p>
+                    <h6>Don’t leave any opportunity. Capture it all.</h6>
+                    <h2>DIGITAL MARKETING</h2>
+                    <p>Your business is growing but not fast enough. You struggle to find a way to capture every last lead <br>
+                        and sale available online. We’ve helped to substantially grow many of the most successful and <br>
+                        fastest growing brands in the world. We take care of our Partners, Customers and Enterprises. <br>
+                        It’s time to go beyond in digitl marketing.</p>
                     <a href="/upload" class="btn theme_btn button_hover">Get Started</a>
                 </div>
             </div>
